Fix Hz 3 jar URI on Windows
Fixes #19608