@@ -32,6 +32,7 @@ import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.UUID;
@@ -60,7 +61,7 @@ public class Hazelcast3Proxy {
         try {
             File hazelcastJar = locateVersion("3.12.12", new File("target"), false)[HAZELCAST_JAR_INDEX];
             URLClassLoader classLoader = new ChildFirstClassLoader(
-                    new URL[]{new URL("file:" + hazelcastJar.toPath().toAbsolutePath())},
+                    new URL[]{hazelcastJar.toURI().toURL()},
                     Hazelcast3Proxy.class.getClassLoader()
             );
             Object config = buildHz3Config(xmlConfig, classLoader);
